--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.myapp</groupId>
   <artifactId>todolist</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
+  <packaging>war</packaging>
   <name>todolist</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
